updating get started section

--- a/docs/get-started/installation.mdx
+++ b/docs/get-started/installation.mdx
@@ -1,6 +1,9 @@
 ---
 sidebar_position: 1
 ---
+
+import useBaseUrl from '@docusaurus/useBaseUrl';
+
 # Installation
 
 ## Supported Platforms
@@ -25,15 +28,17 @@ Run the Aquarius Setup executable. You will see the welcome screen.
 Click Next to continue.
 
 <p align="center">
-  <img src="/img/get-started/installation/install-1.png"/>
+  <img src={useBaseUrl('img/get-started/installation/install-1.png')}/>
 </p>
+
+## Image test
 
 ### Accept the License Agreement
 Carefully read through the license agreement. You must accept the terms to proceed with the installation.
 If you are happy to accept the terms then select "I accept the terms in the License Agreement" and click Next.
 
 <p align="center">
-  <img src="/img/get-started/installation/install-2.png"/>
+  <img src={useBaseUrl('img/get-started/installation/install-2.png')}/>
 </p>
 
 ### Choose Install Location
@@ -47,7 +52,7 @@ C:\Program Files (x86)\Aquarius
 It is recommended to install at the default location.
 
 <p align="center">
-  <img src="/img/get-started/installation/install-3.png"/>
+  <img src={useBaseUrl('img/get-started/installation/install-3.png')}/>
 </p>
 
 Click Install to begin the installation.
@@ -56,7 +61,7 @@ Click Install to begin the installation.
 Once the installation is finished, you will see the completion screen.
 
 <p align="center">
-  <img src="/img/get-started/installation/install-4.png"/>
+  <img src={useBaseUrl('img/get-started/installation/install-4.png')}/>
 </p>
 
 Click Finish to close the setup.
