--- a/docs/get-started/updates.mdx
+++ b/docs/get-started/updates.mdx
@@ -2,11 +2,13 @@
 sidebar_position: 3
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl';
+
 # Updates
 KuasaSemi will periodically release updates for Aquarius to introduce new features and fix bugs. When an update is available, a pop-up notification will appear.
 
 <p align="center">
-  <img src="/img/get-started/updates/updates-1.png" width="600"/>
+  <img src={useBaseUrl('img/get-started/updates/updates-1.png')}/>
 </p>
 
 To install the update, simply click the Update button, and the software will automatically download and install it.
