Fixes and tidying

--- a/docs/get-started/license-key.mdx
+++ b/docs/get-started/license-key.mdx
@@ -18,7 +18,7 @@ After successful payment, you will receive the license key via email.
 
 Once you have obtained your license key, activate it by following these steps:
 
-Open [Your Software Name]. After the first installation, the software will be unlicensed. A window will pop up requesting a license key be entered.
+Open Aquarius. After the first installation, the software will be unlicensed. A window will pop up requesting a license key be entered.
 
 <p align="center">
   <img src={useBaseUrl('img/get-started/license-key/license-key-1.png')}/>
